and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

November 13th, 2014 G.Cosmo               - geomvol-V10-00-08
- Restored constructors/destructor for G4TouchableHistory - derived class
  to be not inline.
- Restored also non-inline constructors/destructors for G4NavigationHistory
  and G4NavigationLevel (the last apparently responsible for crashes on SLC5
  in the allocation).

November 3rd, 2014 G.Cosmo                - geomvol-V10-00-07
- Moved constructors, destructors and assignment operators for
  G4NavigationHistory, G4NavigationLevel, G4NavigationLevelRep and
  G4TouchableHistory to be inline, for CPU optimisation
  (courtesy of S.Wenzel).

October 18th, 2014 A.Dotti                - geomvol-V10-00-06
- Corrected possible data race (reported by DRD) in 
  G4PVReplica::InitialiseWorker().

June 11th, 2014 G.Cosmo                   - geomvol-V10-00-05
- Corrected implementation of copy-constructor and assignment-operator
  for G4NavigationHistory, to provide exact copy for size of the
  histories-level vector.

June 10th, 2014 G.Cosmo                   - geomvol-V10-00-04
- Avoid un-necessary clearing of navigation history levels in
  G4NavigationHistory destructor.

May 14th, 2014 G.Cosmo                    - geomvol-V10-00-03
- Introduced pool G4NavigationHistoryPool for storage and reuse of
  navigation history levels collections.
  Disabled use of G4EnhancedAllocator in G4NavigationHistory accordingly.
- Use G4Allocator for dynamic allocations of G4NavigationHistory objects.

April 10th, 2014 G.Cosmo                  - geomvol-V10-00-02
- Get rid of deprecated 'register' storage class specifier in source files

March 31st, 2014 G.Cosmo                  - geomvol-V10-00-01